# arcaea-offline-ocr-device-creation-wizard

./: .gitignore  index.py  pyproject.toml  requirements.txt
arcaea-offline-ocr-device-creation-wizard/designer/components/: fileSelector.ui  fileSelector_ui.py  imageCropper.ui
arcaea-offline-ocr-device-creation-wizard/designer/dialogs/: newDeviceDialog_ui.py
arcaea-offline-ocr-device-creation-wizard/designer/pages/: welcome.ui
arcaea-offline-ocr-device-creation-wizard/extends/: devices.py  graphics.py  utils.py
arcaea-offline-ocr-device-creation-wizard/implements/: wizard.py
arcaea-offline-ocr-device-creation-wizard/implements/components/: fileSelector.py  imageCropper.py
arcaea-offline-ocr-device-creation-wizard/implements/dialogs/: newDeviceDialog.py
arcaea-offline-ocr-device-creation-wizard/implements/pages/: crop_far.py  crop_general.py  crop_introduction.py  crop_lost.py  crop_max_recall.py  crop_pure.py  crop_score.py  (+8 more)
arcaea-offline-ocr-device-creation-wizard/translations/: extract_translations.py
arcaea_offline_ocr_device_creation_wizard/: __init__.py
arcaea_offline_ocr_device_creation_wizard/extends/: devices.py
arcaea_offline_ocr_device_creation_wizard/images/: images_rc.py
arcaea_offline_ocr_device_creation_wizard/implements/: wizard.py
arcaea_offline_ocr_device_creation_wizard/translations/: extract_translations.py  translations.qrc  translations_rc.py
ui/extends/: devices.py  graphics.py  utils.py
ui/images/: images.qrc  images_rc.py
ui/implements/: fields.py  wizard.py
ui/translations/: en_US.qm  en_US.ts  zh_CN.qm  zh_CN.ts
(+57 files in other folders)
