[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arcaea-offline-ocr-device-creation-wizard"
version = "0.1.0"
authors = [{ name = "283375", email = "log_283375@163.com" }]
description = "Device creation wizard for arcaea-offline-ocr."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["PySide6==6.5.0", "arcaea-offline-ocr==0.1.0"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/283375/arcaea-offline-ocr-device-creation-wizard"
"Bug Tracker" = "https://github.com/283375/arcaea-offline-ocr-device-creation-wizard/issues"

[tool.setuptools]
package-dir = { "arcaea_offline_ocr_device_creation_wizard" = "arcaea_offline_ocr_device_creation_wizard" }

[tool.black]
force-exclude = '''
(
  .*_ui\.py
  | .*_rc\.py
)
'''

[tool.isort]
profile = "black"
src_paths = ["arcaea-offline-ocr-device-creation"]
extend_skip_glob = ["*_ui.py", "*_rc.py"]

[tool.pyright]
ignore = ["**/__debug*.*"]
